@@ -3,7 +3,7 @@
 # Copyright (C) 2020, 2021, 2022, 2023, 2024 by Pierre Rouleau
 
 # Author: Pierre Rouleau <prouleau001@gmail.com>
-# Last Modified Time-stamp: <2024-08-13 18:51:36 EDT, updated by Pierre Rouleau>
+# Last Modified Time-stamp: <2024-11-20 19:27:54 EST, updated by Pierre Rouleau>
 # Keywords: packaging, build-control
 
 # This file is part of the PEL package
@@ -217,6 +217,7 @@ EL_FILES := pel--base.el \
 		pel-register.el \
 		pel-regexp.el \
 		pel-rst.el \
+		pel-rpm-spec.el \
 		pel-scheme.el \
 		pel-screen.el \
 		pel-scroll.el \
